--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
