--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "yohanis tadese",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
