--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.1.4",
     "pug": "^3.0.3",
     "slugify": "^1.6.6",
+    "stripe": "^16.9.0",
     "uuid": "^10.0.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
